dashboard styles fix + add perfect scrollbar

--- a/src/template/profitelo_theme/stylesheets/app/dashboard/dashboard.sass
+++ b/src/template/profitelo_theme/stylesheets/app/dashboard/dashboard.sass
@@ -1,6 +1,6 @@
 .sidebar
   position: fixed
-  overflow-y: overlay
+  overflow-y: auto
   background-color: $c-white
   border-right: 1px solid $c-lines
   border-left: 1px solid $c-lines
@@ -52,9 +52,6 @@
             width: 35px
             text-align: center
             line-height: 17px
-
-
-
           a
             color: $c-secondary-txt
             &:hover
